# code-archive

Sass-Library/: .gitattributes  .gitignore  .prettierrc  .stylelintrc  package.json
Sass-Library/public/: manifest.json
bi-projects/bi_dw_etl/: BIDWETL.sln  SQL Datatabaze.sql  SQL SP ETL SetExecutionStutus.sql
bi-projects/power_bi/: currencies.pbix
generic-projects/Django-Photogalery/: README.md  my_db.sqlite3
generic-projects/Food-Delivery/: README.md
generic-projects/Immutable-Array/: .eslintrc  .prettierignore  .prettierrc  package.json
generic-projects/Interactive-Map/: README.md  build.gradle  gradle.properties  schema.db
generic-projects/Problem-Reporter/: .gitignore  README.md  pom.xml
generic-projects/SPA-Template/: .babelrc  .parcelrc  README.md  config  index  index.html  package.json  packed-refs
generic-projects/Sass-Library/: README.md
haskell-projects/crash/: crash.cabal
haskell-projects/evil/: Main.hs
haskell-projects/hw1/: hw1.cabal
haskell-projects/hw1/src/: Main.hs
mas-projects/hw_1_2_python/: solution.ipynb
mas-projects/hw_3_gephi/: data_analyze_[degree,centrality,modularity].csv  graph_export.csv  graph_export.gdf  graph_export.gexf  graph_export.gml  graph_export.graphml  project.gephi
mas-projects/hw_5_python/: solution.ipynb
mas-projects/network_analysis/: Emails.mtx  report.md  solution.ipynb
pa-projects/: .gitignore  Dockerfile-venv  README.md  Taskfile.yml  requirements.txt
pa-projects/u1/: input.txt  solution.py
pa-projects/u2/: solution.py
pa-projects/u3/: solution.py
(+217 files in other folders)
